--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             curl -O --fail ${CIRCLECI_SCRIPT_DIR}/${PUBLISH}
             chmod 700 ./${PUBLISH}
             ./${PUBLISH}
-            
+
   deploy-image-to-beta:
     docker:
       - image: cyberdojo/gcloud-kubectl-helm
@@ -44,9 +44,7 @@ jobs:
             gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
             helm init --client-only
             helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            # comment this to reset _all_ services
-            export HELM_REUSE_VALUES=--reuse-values
-            helm upgrade --install --version 0.1.0 --namespace=beta ${HELM_REUSE_VALUES} --set-string image.nginx.tag=${CIRCLE_SHA1:0:7} beta-cyber-dojo praqma/cyber-dojo
+            #helm upgrade --install --namespace=beta ${HELM_REUSE_VALUES} --set-string image.nginx.tag=${CIRCLE_SHA1:0:7} beta-cyber-dojo praqma/cyber-dojo
 
 workflows:
   version: 2
