--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2
 jobs:
   build-publish:
 
-    machine:
-      enabled: true
+    machine: true
 
     working_directory: ~/repo
 
@@ -46,7 +45,7 @@ jobs:
             gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
             helm init --client-only
             helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            helm upgrade --install --namespace=beta --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values.yaml beta-nginx praqma/cyber-dojo-service --version 0.2.0
+            helm upgrade --install --namespace=beta --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values.yaml beta-nginx praqma/cyber-dojo-service --version 0.2.1
 
 workflows:
   version: 2
