--- a/.circleci/nginx-values.yaml
+++ b/.circleci/nginx-values.yaml
@@ -2,43 +2,36 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# app name
 fullnameOverride: "nginx"
 
-# deployment spec
 replicaCount: 1
 
+service:
+  port: 80
 
-
-# containers
-# provide default values that you HAVE to overwrite in your values.yaml file
 containers:
   - name: nginx
     image: cyberdojo/nginx
+    tag: ""
     resources:
       limits:
-       memory: 128Mi
+        memory: 128Mi
       requests:
-       memory: 128Mi
+        memory: 128Mi
     # livenessProbe:
-    #   path: /health
+    #   path: /sha
     #   port: 80
     # readinessProbe:
-    #   path: /health
+    #   path: /ready?
     #   port: 80
 
 envFromSecret: {}
-
 
 nodeSelector: {}
 
 affinity: {}
 
 tolerations: []
-
-# service
-service:
-  port: 80
 
 ingress:
   enabled: true
