--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,23 @@ jobs:
             gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
             helm init --client-only
             helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            helm upgrade --install --namespace=beta --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values.yaml beta-nginx praqma/cyber-dojo-service --version 0.2.1
+            helm upgrade --install --namespace=beta --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values-beta.yaml beta-nginx praqma/cyber-dojo-service --version 0.2.3
+
+  deploy-to-prod:
+    docker:
+      - image: cyberdojo/gcloud-kubectl-helm
+    steps:
+      - checkout
+      - run:
+          name: authenticate with gcloud and deploy with helm
+          command: |
+            set -e
+            echo $GCP_K8S_CREDENTIALS > /gcp/gcp-credentials.json
+            gcloud auth activate-service-account "$SERVICE_ACCOUNT" --key-file=/gcp/gcp-credentials.json
+            gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
+            helm init --client-only
+            helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
+            helm upgrade --install --namespace=prod --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values-prod.yaml prod-nginx praqma/cyber-dojo-service --version 0.2.3
 
 workflows:
   version: 2
@@ -61,3 +77,11 @@ workflows:
           context: cyberdojo-context
           requires:
             - build-publish
+      - approve-to-prod:
+          type: approval
+          requires:
+            - deploy-to-beta
+      - deploy-to-prod:
+          context: cyberdojo-context
+          requires:
+            - approve-to-prod
