--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,15 @@ jobs:
             gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
             helm init --client-only
             helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            helm upgrade --install --namespace=beta --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values-beta.yaml beta-nginx praqma/cyber-dojo-service --version 0.2.3
+            helm upgrade \
+              --install \
+              --namespace=beta \
+              --set-string containers[0].tag=${CIRCLE_SHA1:0:7} \
+              -f .circleci/nginx-values.yaml \
+              -f .circleci/nginx-ingress-beta.yaml \
+              beta-nginx \
+              praqma/cyber-dojo-service \
+              --version 0.2.3
 
   deploy-to-prod:
     docker:
@@ -61,7 +69,15 @@ jobs:
             gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
             helm init --client-only
             helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            helm upgrade --install --namespace=prod --set-string containers[0].tag=${CIRCLE_SHA1:0:7} -f .circleci/nginx-values-prod.yaml prod-nginx praqma/cyber-dojo-service --version 0.2.3
+            helm upgrade \
+              --install \
+              --namespace=prod \
+              --set-string containers[0].tag=${CIRCLE_SHA1:0:7} \
+              -f .circleci/nginx-values.yaml \
+              -f .circleci/nginx-ingress-prod.yaml \
+              prod-nginx \
+              praqma/cyber-dojo-service \
+              --version 0.2.3
 
 workflows:
   version: 2
