restore k8s helm upgrade command to use two -f/--values entries

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,8 @@ jobs:
               --install \
               --namespace=beta \
               --set-string containers[0].tag=${CIRCLE_SHA1:0:7} \
-              -f .circleci/nginx-values.yaml \
-                 .circleci/nginx-ingress-beta.yaml \
+              --values .circleci/nginx-values.yaml \
+              --values .circleci/nginx-ingress-beta.yaml \
               beta-nginx \
               praqma/cyber-dojo-service \
               --version 0.2.3
@@ -73,8 +73,8 @@ jobs:
               --install \
               --namespace=prod \
               --set-string containers[0].tag=${CIRCLE_SHA1:0:7} \
-              -f .circleci/nginx-values.yaml \
-                 .circleci/nginx-ingress-prod.yaml \
+              --values .circleci/nginx-values.yaml \
+              --values .circleci/nginx-ingress-prod.yaml \
               prod-nginx \
               praqma/cyber-dojo-service \
               --version 0.2.3
