in nginx.conf add avatar/image redirect to avatars service

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,20 @@
 server {
     listen       80;
     server_name  localhost;
+    root         /usr/share/nginx/html;
 
+    location /avatar/image/ {
+        try_files $uri @avatars;
+    }
     location / {
-        root      /usr/share/nginx/html;
-        index     index.html index.htm;
-        try_files $uri/index.html $uri.html $uri @upstream;
+        try_files $uri @web;
     }
 
-    location @upstream {
+    location @web {
         proxy_pass http://web:3000;
+    }
+    location @avatars {
+        rewrite /avatar/images/(.*) /image/$1 break;
+        proxy_pass http://avatars:5027;
     }
 }
