fix incorrect rewrite for avatar/image

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
         proxy_pass http://web:3000;
     }
     location @avatars {
-        rewrite /avatar/images/(.*) /image/$1 break;
+        rewrite /avatar/image/(.*) /image/$1 break;
         proxy_pass http://avatars:5027;
     }
 }
