--- a/nginx.conf
+++ b/nginx.conf
@@ -4,18 +4,19 @@ server {
     server_name  localhost;
     root         /usr/share/nginx/html;
 
-    location /avatar/image/ {
-        try_files $uri @avatars;
-    }
-    location / {
-        try_files $uri @web;
-    }
+    location /avatar/image/        { try_files $uri @avatars; }
+    location /traffic-light/image/ { try_files $uri @ragger;  }
+    location /                     { try_files $uri @web;     }
 
-    location @web {
-        proxy_pass http://web:3000;
-    }
     location @avatars {
         rewrite /avatar/image/(.*) /image/$1 break;
         proxy_pass http://avatars:5027;
+    }
+    location @ragger {
+        rewrite /traffic-light/image/(.*) /image/$1 break;
+        proxy_pass http://ragger:5537;
+    }
+    location @web {
+        proxy_pass http://web:3000;
     }
 }
