Refactor script so image-name is not repeated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 
 services:
   nginx:
-    image: cyberdojo/nginx
+    image: ${IMAGE_NAME}
     build:
       context: .
       args:
