Spike a route to new custom service (beta only)

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ server {
     server_name  localhost;
     root         /usr/share/nginx/html;
 
+    location /custom/show          { try_files @uri @custom;  }
     location /avatar/image/        { try_files $uri @avatars; }
     location /                     { try_files $uri @web;     }
 
@@ -13,5 +14,9 @@ server {
     }
     location @web {
         proxy_pass http://web:3000;
+    }
+    location @custom {
+        rewrite /custom/show/(.*) /show/$1 break;    
+        proxy_pass http://custom:4536;
     }
 }
