Try route to new custom service again

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,15 +8,15 @@ server {
     location /avatar/image/        { try_files $uri @avatars; }
     location /                     { try_files $uri @web;     }
 
+    location @custom {
+        rewrite /custom/show /show break;
+        proxy_pass http://custom:4536;
+    }
     location @avatars {
         rewrite /avatar/image/(.*) /image/$1 break;
         proxy_pass http://avatars:5027;
     }
     location @web {
         proxy_pass http://web:3000;
-    }
-    location @custom {
-        rewrite /custom/show/(.*) /show/$1 break;    
-        proxy_pass http://custom:4536;
     }
 }
