Set redirect for custom/show and custom/assets

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,12 @@ server {
     server_name  localhost;
     root         /usr/share/nginx/html;
 
-    location /custom/show          { try_files @uri @custom;  }
+    location /custom/              { try_files @uri @custom;  }
     location /avatar/image/        { try_files $uri @avatars; }
     location /                     { try_files $uri @web;     }
 
     location @custom {
-        rewrite /custom/show /show break;
+        rewrite /custom/(.*)/(.*) /$1/$2 break;
         proxy_pass http://custom:4536;
     }
     location @avatars {
