--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,13 @@ server {
     server_name  localhost;
     root         /usr/share/nginx/html;
 
-    location /custom/              { try_files @uri @custom;  }
+    location /custom/show          { try_files @uri @custom;  }
     location /avatar/image/        { try_files $uri @avatars; }
     location /                     { try_files $uri @web;     }
 
     location @custom {
-        rewrite /custom/(.*)/(.*) /$1/$2 break;
+        rewrite /custom/show        /show      break;
+        rewrite /custom/assets/(.*) /assets/$1 break;
         proxy_pass http://custom:4536;
     }
     location @avatars {
