Try (yet again) redirect for custom/show and custom/assets

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,16 @@ server {
     server_name  localhost;
     root         /usr/share/nginx/html;
 
-    location /custom/show          { try_files @uri @custom;  }
+    location /custom/show          { try_files @uri @custom_show; }
+    location /custom/assets/       { try_files @uri @custom_assets; }
     location /avatar/image/        { try_files $uri @avatars; }
-    location /                     { try_files $uri @web;     }
+    location /                     { try_files $uri @web; }
 
-    location @custom {
-        rewrite /custom/show        /show      break;
+    location @custom_show {
+        rewrite /custom/show /show break;
+        proxy_pass http://custom:4536;
+    }
+    location @custom_assets {
         rewrite /custom/assets/(.*) /assets/$1 break;
         proxy_pass http://custom:4536;
     }
