--- a/nginx.conf
+++ b/nginx.conf
@@ -4,16 +4,23 @@ server {
     server_name  localhost;
     root         /usr/share/nginx/html;
 
-    location /custom/show            { try_files @uri @custom; }
-    location /custom/assets/         { try_files @uri @custom; }
-    location /custom/save_individual { try_files @uri @custom; }
-    location /custom/save_group      { try_files @uri @custom; }
+    location /custom/show            { try_files @uri @custom_show; }
+    location /custom/assets/         { try_files @uri @custom_assets; }
+    location /custom/save_individual { try_files @uri @custom_save_individual; }
 
     location /avatar/image/          { try_files $uri @avatars; }
     location /                       { try_files $uri @web; }
 
-    location @custom {
-        rewrite ^/custom/(.*) $1 break;
+    location @custom_show {
+        rewrite /custom/show /show break;
+        proxy_pass http://custom:4536;
+    }
+    location @custom_assets {
+        rewrite /custom/assets/(.*) /assets/$1 break;
+        proxy_pass http://custom:4536;
+    }
+    location @custom_save_individual {
+        rewrite /custom/save_individual /save_individual break;
         proxy_pass http://custom:4536;
     }
 
