--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ server {
     location /custom/show            { try_files @uri @custom_show; }
     location /custom/assets/         { try_files @uri @custom_assets; }
     location /custom/save_individual { try_files @uri @custom_save_individual; }
+    location /custom/save_group      { try_files @uri @custom_save_group; }
 
     location /avatar/image/          { try_files $uri @avatars; }
     location /                       { try_files $uri @web; }
@@ -21,6 +22,10 @@ server {
     }
     location @custom_save_individual {
         rewrite /custom/save_individual /save_individual break;
+        proxy_pass http://custom:4536;
+    }
+    location @custom_save_group {
+        rewrite /custom/save_group /save_group break;
         proxy_pass http://custom:4536;
     }
 
