Add https redirect/forwarding settings to nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,38 @@
 
 server {
-    listen       80;
-    server_name  localhost;
-    root         /usr/share/nginx/html;
+  listen 80;
+  server_name localhost;
 
-    location /avatar/image/          { try_files $uri @avatars; }
-    location /                       { try_files $uri @web; }
+  # Path for static files
+  root /usr/share/nginx/html;
 
-    location @avatars {
-        rewrite /avatar/image/(.*) /image/$1 break;
-        proxy_pass http://avatars:5027;
+  client_max_body_size 1G;
+
+  location /avatar/image/ {
+    rewrite /avatar/image/(.*) /image/$1 break;
+    proxy_pass http://avatars:5027;
+  }
+
+  location / {
+    # An HTTP header important enough to have its own Wikipedia entry:
+    # http://en.wikipedia.org/wiki/X-Forwarded-For
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # Help Rack set the proper protocol (eg https) for doing redirects:
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # Pass the Host: header from the client right along so redirects
+    # can be set properly within the Rack application
+    proxy_set_header Host $http_host;
+
+    # We don't want nginx trying to do something clever with
+    # redirects, we set the Host: header above already.
+    proxy_redirect off;
+
+    # Try to serve static files from nginx.
+    if (!-f $request_filename) {
+      proxy_pass http://web:3000;
+      break;
     }
-    location @web {
-        proxy_pass http://web:3000;
-    }
+  }
 }
