--- a/nginx.conf
+++ b/nginx.conf
@@ -8,12 +8,15 @@ server {
 
   client_max_body_size 1G;
 
-  location /avatar/image/ {
+  location /avatar/image/ { try_files $uri @avatars; }
+  location /              { try_files $uri @web; }
+
+  location @avatars {
     rewrite /avatar/image/(.*) /image/$1 break;
     proxy_pass http://avatars:5027;
   }
 
-  location / {
+  location @web {
     # An HTTP header important enough to have its own Wikipedia entry:
     # http://en.wikipedia.org/wiki/X-Forwarded-For
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
