--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
 version: 2
 jobs:
   build-publish:
-
     machine:
       image: ubuntu-1604:201903-01
-
-    working_directory: ~/repo
-
     steps:
       - checkout
       - run:
@@ -38,23 +34,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: authenticate with gcloud and deploy with helm
-          command: |
-            set -e
-            echo $GCP_K8S_CREDENTIALS > /gcp/gcp-credentials.json
-            gcloud auth activate-service-account "$SERVICE_ACCOUNT" --key-file=/gcp/gcp-credentials.json
-            gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
-            helm init --client-only
-            helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            helm upgrade \
-              --install \
-              --namespace=beta \
-              --set-string containers[0].tag=${CIRCLE_SHA1:0:7} \
-              --values .circleci/nginx-values.yaml \
-              --values .circleci/nginx-ingress-beta.yaml \
-              beta-nginx \
-              praqma/cyber-dojo-service \
-              --version 0.2.4
+          name: Authenticate with gcloud, deploy to beta with helm
+          command: ./.circleci/deploy_to_namespace.sh beta
 
   deploy-to-prod:
     docker:
@@ -62,23 +43,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: authenticate with gcloud and deploy with helm
-          command: |
-            set -e
-            echo $GCP_K8S_CREDENTIALS > /gcp/gcp-credentials.json
-            gcloud auth activate-service-account "$SERVICE_ACCOUNT" --key-file=/gcp/gcp-credentials.json
-            gcloud container clusters get-credentials "$CLUSTER" --zone "$ZONE" --project "$PROJECT"
-            helm init --client-only
-            helm repo add praqma https://praqma-helm-repo.s3.amazonaws.com/
-            helm upgrade \
-              --install \
-              --namespace=prod \
-              --set-string containers[0].tag=${CIRCLE_SHA1:0:7} \
-              --values .circleci/nginx-values.yaml \
-              --values .circleci/nginx-ingress-prod.yaml \
-              prod-nginx \
-              praqma/cyber-dojo-service \
-              --version 0.2.4
+          name: Authenticate with gcloud, deploy to prod with helm
+          command: ./.circleci/deploy_to_namespace.sh prod
 
 workflows:
   version: 2
@@ -88,17 +54,13 @@ workflows:
           context: cyberdojo-context
           filters:
             branches:
-              only:
-                  - master
+              only: [ master ]
       - deploy-to-beta:
           context: cyberdojo-context
-          requires:
-            - build-publish
+          requires: [ build-publish ]
       - approve-to-prod:
           type: approval
-          requires:
-            - deploy-to-beta
+          requires: [ deploy-to-beta ]
       - deploy-to-prod:
           context: cyberdojo-context
-          requires:
-            - approve-to-prod
+          requires: [ approve-to-prod ]
