Move .circleci commands to publish tagged images on dockerhub into their own script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.7'
 
 services:
   nginx:
-    image: ${IMAGE_NAME}
+    image: ${CYBER_DOJO_NGINX_IMAGE}
     build:
       context: .
-      args:
-        - SHA
+      args: [ COMMIT_SHA ]
