Add rewrites for creator/custom-chooser so allow spike on beta

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -8,8 +8,23 @@ server {
 
   client_max_body_size 1G;
 
+  location /custom-chooser/  { try_files $uri @custom_chooser; }
+  location /creator/         { try_files $uri @creator; }
+
   location /avatar/image/ { try_files $uri @avatars; }
   location /              { try_files $uri @web; }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  location @custom_chooser {
+    rewrite ^/custom/(.*) /$1 break;
+    proxy_pass http://custom-chooser-server:4536;
+  }
+
+  location @creator {
+    rewrite ^/creator/(.*) /$1 break;
+    proxy_pass http://creator:4523;
+  }
 
   location @avatars {
     rewrite /avatar/image/(.*) /image/$1 break;
