Fix name of custom-chooser

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -18,7 +18,7 @@ server {
 
   location @custom_chooser {
     rewrite ^/custom/(.*) /$1 break;
-    proxy_pass http://custom-chooser-server:4536;
+    proxy_pass http://custom-chooser:4536;
   }
 
   location @creator {
