Fix path in .conf file

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -17,7 +17,7 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
   location @custom_chooser {
-    rewrite ^/custom/(.*) /$1 break;
+    rewrite ^/custom-chooser/(.*) /$1 break;
     proxy_pass http://custom-chooser:4536;
   }
 
