Add rewrite-rule for deprecated setup_custom_start_point paths

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -8,13 +8,20 @@ server {
 
   client_max_body_size 1G;
 
-  location /custom-chooser/  { try_files $uri @custom_chooser; }
-  location /creator/         { try_files $uri @creator; }
+  location /setup_custom_start_point/ { try_files $uri @deprecated_setup; }
+  location /custom-chooser/           { try_files $uri @custom_chooser; }
+  location /creator/                  { try_files $uri @creator; }
 
-  location /avatar/image/ { try_files $uri @avatars; }
-  location /              { try_files $uri @web; }
+  location /avatar/image/             { try_files $uri @avatars; }
+  location /                          { try_files $uri @web; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  location @deprecated_setup {
+    rewrite ^/setup_custom_start_point/save_group_json      /deprecated_create_custom_group break;
+    rewrite ^/setup_custom_start_point/save_individual_json /deprecated_create_custom_kata  break;
+    proxy_pass http://creator:4523;
+  }
 
   location @custom_chooser {
     rewrite ^/custom-chooser/(.*) /$1 break;
@@ -27,7 +34,7 @@ server {
   }
 
   location @avatars {
-    rewrite /avatar/image/(.*) /image/$1 break;
+    rewrite ^/avatar/image/(.*) /image/$1 break;
     proxy_pass http://avatars:5027;
   }
 
