--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -8,7 +8,7 @@ server {
 
   client_max_body_size 1G;
 
-  location /setup_custom_start_point/ { try_files $uri @deprecated_setup; }
+  #location /setup_custom_start_point/ { try_files $uri @deprecated_setup; }
   location /custom-chooser/           { try_files $uri @custom_chooser; }
   location /creator/                  { try_files $uri @creator; }
 
