Fix avatars/sha route (needs trailing s plural)

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -15,11 +15,18 @@ server {
     try_files $uri @deprecated_setup;
   }
 
-  location /custom-chooser/           { try_files $uri @custom_chooser; }
-  location /creator/                  { try_files $uri @creator; }
+  location /avatars/sha                { try_files $uri @avatars; }
+  location /custom-start-points/sha    { try_files $uri @custom_start_points; }
+  location /exercises-start-points/sha { try_files $uri @exercises_start_points; }
+  location /languages-start-points/sha { try_files $uri @languages_start_points; }
+  location /differ/sha                 { try_files $uri @differ; }
+  location /runner/sha                 { try_files $uri @runner; }
+  location /saver/sha                  { try_files $uri @saver; }
 
-  location /avatar/image/             { try_files $uri @avatars; }
-  location /                          { try_files $uri @web; }
+  location /avatar/image/              { try_files $uri @avatars; }
+  location /creator/                   { try_files $uri @creator; }
+  location /custom-chooser/            { try_files $uri @custom_chooser; }
+  location /                           { try_files $uri @web; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
@@ -29,9 +36,42 @@ server {
     proxy_pass http://creator:4523;
   }
 
-  location @custom_chooser {
-    rewrite ^/custom-chooser/(.*) /$1 break;
-    proxy_pass http://custom-chooser:4536;
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  location @avatars {
+    rewrite ^/avatars/sha       /sha break;
+    rewrite ^/avatar/image/(.*) /image/$1 break;
+    proxy_pass http://avatars:5027;
+  }
+
+
+  location @custom_start_points {
+    rewrite ^/custom-start-points/sha  /sha break;
+    proxy_pass http://custom-start-points:4526;
+  }
+  location @exercises_start_points {
+    rewrite ^/exercises-start-points/sha  /sha break;
+    proxy_pass http://exercises-start-points:4525;
+  }
+  location @languages_start_points {
+    rewrite ^/languages-start-points/sha  /sha break;
+    proxy_pass http://languages-start-points:4524;
+  }
+
+
+  location @differ {
+    rewrite ^/differ/sha /sha break;
+    proxy_pass http://differ:4567;
+  }
+
+  location @runner {
+    rewrite ^/runner/sha /sha break;
+    proxy_pass http://runner:4597;
+  }
+
+  location @saver {
+    rewrite ^/saver/sha /sha break;
+    proxy_pass http://saver:4537;
   }
 
   location @creator {
@@ -39,9 +79,9 @@ server {
     proxy_pass http://creator:4523;
   }
 
-  location @avatars {
-    rewrite ^/avatar/image/(.*) /image/$1 break;
-    proxy_pass http://avatars:5027;
+  location @custom_chooser {
+    rewrite ^/custom-chooser/(.*) /$1 break;
+    proxy_pass http://custom-chooser:4536;
   }
 
   location @web {
