--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,6 +5,7 @@ ARG NGINX_DIR=/usr/share/nginx/html
 
 RUN         rm -rf ${NGINX_DIR}
 COPY        images ${NGINX_DIR}/images
+COPY        js     ${NGINX_DIR}/js
 COPY traffic-light ${NGINX_DIR}/traffic-light
 RUN chmod -R +r ${NGINX_DIR}
 
