Add rewrites for exercises-chooser

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -26,6 +26,7 @@ server {
   location /avatar/image/              { try_files $uri @avatars; }
   location /creator/                   { try_files $uri @creator; }
   location /custom-chooser/            { try_files $uri @custom_chooser; }
+  location /exercises-chooser/         { try_files $uri @exercises_chooser; }
   location /                           { try_files $uri @web; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -82,6 +83,11 @@ server {
   location @custom_chooser {
     rewrite ^/custom-chooser/(.*) /$1 break;
     proxy_pass http://custom-chooser:4536;
+  }
+
+  location @exercises_chooser {
+    rewrite ^/exercises-chooser/(.*) /$1 break;
+    proxy_pass http://exercises-chooser:4535;
   }
 
   location @web {
