Add rewrites for languages-chooser

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -8,6 +8,8 @@ server {
 
   client_max_body_size 1G;
 
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
   location /setup_custom_start_point/save_group_json {
     try_files $uri @deprecated_setup;
   }
@@ -15,18 +17,23 @@ server {
     try_files $uri @deprecated_setup;
   }
 
-  location /avatars/sha                { try_files $uri @avatars; }
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
   location /custom-start-points/sha    { try_files $uri @custom_start_points; }
   location /exercises-start-points/sha { try_files $uri @exercises_start_points; }
   location /languages-start-points/sha { try_files $uri @languages_start_points; }
+
+  location /custom-chooser/            { try_files $uri @custom_chooser; }
+  location /exercises-chooser/         { try_files $uri @exercises_chooser; }
+  location /languages-chooser/         { try_files $uri @languages_chooser; }
+
+  location /avatars/sha                { try_files $uri @avatars; }
+  location /avatar/image/              { try_files $uri @avatars; }
+  location /creator/                   { try_files $uri @creator; }
   location /differ/sha                 { try_files $uri @differ; }
   location /runner/sha                 { try_files $uri @runner; }
   location /saver/sha                  { try_files $uri @saver; }
 
-  location /avatar/image/              { try_files $uri @avatars; }
-  location /creator/                   { try_files $uri @creator; }
-  location /custom-chooser/            { try_files $uri @custom_chooser; }
-  location /exercises-chooser/         { try_files $uri @exercises_chooser; }
   location /                           { try_files $uri @web; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -38,13 +45,6 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @avatars {
-    rewrite ^/avatars/sha       /sha break;
-    rewrite ^/avatar/image/(.*) /image/$1 break;
-    proxy_pass http://avatars:5027;
-  }
-
 
   location @custom_start_points {
     rewrite ^/custom-start-points/sha  /sha break;
@@ -59,6 +59,30 @@ server {
     proxy_pass http://languages-start-points:4524;
   }
 
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  location @custom_chooser {
+    rewrite ^/custom-chooser/(.*) /$1 break;
+    proxy_pass http://custom-chooser:4536;
+  }
+
+  location @exercises_chooser {
+    rewrite ^/exercises-chooser/(.*) /$1 break;
+    proxy_pass http://exercises-chooser:4535;
+  }
+
+  location @languages_chooser {
+    rewrite ^/languages-chooser/(.*) /$1 break;
+    proxy_pass http://languages-chooser:4534;
+  }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  location @avatars {
+    rewrite ^/avatars/sha       /sha break;
+    rewrite ^/avatar/image/(.*) /image/$1 break;
+    proxy_pass http://avatars:5027;
+  }
 
   location @differ {
     rewrite ^/differ/sha /sha break;
@@ -80,15 +104,7 @@ server {
     proxy_pass http://creator:4523;
   }
 
-  location @custom_chooser {
-    rewrite ^/custom-chooser/(.*) /$1 break;
-    proxy_pass http://custom-chooser:4536;
-  }
-
-  location @exercises_chooser {
-    rewrite ^/exercises-chooser/(.*) /$1 break;
-    proxy_pass http://exercises-chooser:4535;
-  }
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
   location @web {
     # An HTTP header important enough to have its own Wikipedia entry:
