--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -1,4 +1,9 @@
 
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  '' close;
+}
+
 server {
   listen 80;
   server_name localhost;
@@ -128,4 +133,21 @@ server {
       break;
     }
   }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  location /repler/ {
+    proxy_pass http://repler:4657/repler/;
+    proxy_http_version 1.1;
+  }
+
+  # TODO: This may not be necessary. We might be able to use /repler/ above for
+  # all of this traffic. Try it out.
+  location /repler_ws/ {
+    proxy_pass http://repler:4657/repler/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+  }
+
 }
