Update config for repler (allows /sha route)

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -36,6 +36,7 @@ server {
   location /avatar/image/              { try_files $uri @avatars; }
   location /creator/                   { try_files $uri @creator; }
   location /differ/sha                 { try_files $uri @differ; }
+  location /repler/sha                 { try_files $uri @repler; }
   location /runner/sha                 { try_files $uri @runner; }
   location /saver/sha                  { try_files $uri @saver; }
 
@@ -136,8 +137,9 @@ server {
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-  location /repler/ {
-    proxy_pass http://repler:4657/repler/;
+  location @repler {
+    rewrite ^/repler/(.*) /$1 break;
+    proxy_pass http://repler:4657;
     proxy_http_version 1.1;
   }
 
