Allow more than 'sha' on repler/ routes

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -36,7 +36,7 @@ server {
   location /avatar/image/              { try_files $uri @avatars; }
   location /creator/                   { try_files $uri @creator; }
   location /differ/sha                 { try_files $uri @differ; }
-  location /repler/sha                 { try_files $uri @repler; }
+  location /repler                     { try_files $uri @repler; }
   location /runner/sha                 { try_files $uri @runner; }
   location /saver/sha                  { try_files $uri @saver; }
 
