Add nginx.conf entry for shas service

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -39,6 +39,7 @@ server {
   location /repler                     { try_files $uri @repler; }
   location /runner/sha                 { try_files $uri @runner; }
   location /saver/sha                  { try_files $uri @saver; }
+  location /shas                       { try_files $uri @shas; }
 
   location /                           { try_files $uri @web; }
 
@@ -108,6 +109,11 @@ server {
   location @creator {
     rewrite ^/creator/(.*) /$1 break;
     proxy_pass http://creator:4523;
+  }
+
+  location @shas {
+    rewrite ^/shas/(.*) /$1 break;
+    proxy_pass http://shas:4522;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
