Fix repler routes

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -152,7 +152,8 @@ server {
   # TODO: This may not be necessary. We might be able to use /repler/ above for
   # all of this traffic. Try it out.
   location /repler_ws/ {
-    proxy_pass http://repler:4657/repler/;
+    rewrite ^/repler_ws/(.*) /$1 break;
+    proxy_pass http://repler:4657;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
