Ensure there are routes for /repler/ and /repler_ws/

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -36,10 +36,23 @@ server {
   location /avatar/image/              { try_files $uri @avatars; }
   location /creator/                   { try_files $uri @creator; }
   location /differ/sha                 { try_files $uri @differ; }
-  location /repler                     { try_files $uri @repler; }
   location /runner/sha                 { try_files $uri @runner; }
   location /saver/sha                  { try_files $uri @saver; }
   location /shas                       { try_files $uri @shas; }
+
+  location /repler/ {
+    proxy_pass http://repler:4657/repl/;
+    proxy_http_version 1.1;
+  }
+
+  location /repler_ws/ {
+    # TODO: This may not be necessary. We might be able to use /repler/
+    # above for all of this traffic. Try it out.
+    proxy_pass http://repler:4657/repl/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+  }
 
   location /                           { try_files $uri @web; }
 
@@ -139,24 +152,6 @@ server {
       proxy_pass http://web:3000;
       break;
     }
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @repler {
-    rewrite ^/repler/(.*) /$1 break;
-    proxy_pass http://repler:4657;
-    proxy_http_version 1.1;
-  }
-
-  # TODO: This may not be necessary. We might be able to use /repler/ above for
-  # all of this traffic. Try it out.
-  location /repler_ws/ {
-    rewrite ^/repler_ws/(.*) /$1 break;
-    proxy_pass http://repler:4657;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
   }
 
 }
