Add fix for repler/sha which is used in shas page.

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -40,19 +40,27 @@ server {
   location /saver/sha                  { try_files $uri @saver; }
   location /shas                       { try_files $uri @shas; }
 
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # TODO: Try using /repler/ for all of this traffic.
+
+  location /repler/sha {
+    rewrite ^/repler/sha /sha break;
+    proxy_pass http://repler:4657;
+  }
+
   location /repler/ {
     proxy_pass http://repler:4657/repl/;
     proxy_http_version 1.1;
   }
 
   location /repler_ws/ {
-    # TODO: This may not be necessary. We might be able to use /repler/
-    # above for all of this traffic. Try it out.
     proxy_pass http://repler:4657/repl/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
   }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
   location /                           { try_files $uri @web; }
 
