[ci skip] Tidy .conf file and add comments

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -14,6 +14,7 @@ server {
   client_max_body_size 1G;
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Deprecated routes
 
   location /setup_custom_start_point/save_group_json {
     try_files $uri @deprecated_setup;
@@ -23,24 +24,38 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # The avatar service is abstraction of 64 entrants in a group-exercise
+  # each indexed entrant (eg /avatar/index/3) is an image.
 
+  location /avatar/image/              { try_files $uri @avatars; }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # The shas service is a simple one-page service that shows
+  # all the services' git-commit shas used to create their currently
+  # running image. A generically routed service (eg custom-chooser)
+  # does not need an explicit route here.
+
+  location /avatars/sha                { try_files $uri @avatars; }
   location /custom-start-points/sha    { try_files $uri @custom_start_points; }
   location /exercises-start-points/sha { try_files $uri @exercises_start_points; }
   location /languages-start-points/sha { try_files $uri @languages_start_points; }
+  location /differ/sha                 { try_files $uri @differ; }
+  location /runner/sha                 { try_files $uri @runner; }
+  location /saver/sha                  { try_files $uri @saver; }
+
+  location /shas                       { try_files $uri @shas; }
+
+  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Pages to set up an exercise
 
   location /custom-chooser/            { try_files $uri @custom_chooser; }
   location /exercises-chooser/         { try_files $uri @exercises_chooser; }
   location /languages-chooser/         { try_files $uri @languages_chooser; }
 
-  location /avatars/sha                { try_files $uri @avatars; }
-  location /avatar/image/              { try_files $uri @avatars; }
   location /creator/                   { try_files $uri @creator; }
-  location /differ/sha                 { try_files $uri @differ; }
-  location /runner/sha                 { try_files $uri @runner; }
-  location /saver/sha                  { try_files $uri @saver; }
-  location /shas                       { try_files $uri @shas; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Read-Eval-Print-Loop service
   # TODO: Try using /repler/ for all of this traffic.
 
   location /repler/sha {
@@ -61,7 +76,8 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
+  # For everything else try web.
+  
   location /                           { try_files $uri @web; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
