Use single URL for repler routes

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -42,6 +42,10 @@ server {
   location /differ/sha                 { try_files $uri @differ; }
   location /runner/sha                 { try_files $uri @runner; }
   location /saver/sha                  { try_files $uri @saver; }
+  location /repler/sha                 {
+    rewrite ^/repler/sha /sha break;
+    proxy_pass http://repler:4657;
+  }
 
   location /shas                       { try_files $uri @shas; }
 
@@ -55,20 +59,9 @@ server {
   location /creator/                   { try_files $uri @creator; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Read-Eval-Print-Loop service
-  # TODO: Try using /repler/ for all of this traffic.
-
-  location /repler/sha {
-    rewrite ^/repler/sha /sha break;
-    proxy_pass http://repler:4657;
-  }
+  # Read-Eval-Print-Loop service (uses web-sockets)
 
   location /repler/ {
-    proxy_pass http://repler:4657/repl/;
-    proxy_http_version 1.1;
-  }
-
-  location /repler_ws/ {
     proxy_pass http://repler:4657/repl/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
@@ -77,7 +70,7 @@ server {
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # For everything else try web.
-  
+
   location /                           { try_files $uri @web; }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
