Refactoring; tidy .conf file

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -17,17 +17,22 @@ server {
   # Deprecated routes
 
   location /setup_custom_start_point/save_group_json {
-    try_files $uri @deprecated_setup;
+    rewrite ^/setup_custom_start_point/save_group_json /deprecated_group_create_custom break;
+    proxy_pass http://creator:4523;
   }
   location /setup_custom_start_point/save_individual_json {
-    try_files $uri @deprecated_setup;
+    rewrite ^/setup_custom_start_point/save_individual_json /deprecated_kata_create_custom  break;
+    proxy_pass http://creator:4523;
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The avatar service is abstraction of 64 entrants in a group-exercise
   # each indexed entrant (eg /avatar/index/3) is an image.
 
-  location /avatar/image/              { try_files $uri @avatars; }
+  location /avatar/image/ {
+    rewrite ^/avatar/image/(.*) /image/$1 break;
+    proxy_pass http://avatars:5027;
+  }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The shas service is a simple one-page service that shows
@@ -35,28 +40,65 @@ server {
   # running image. A generically routed service (eg custom-chooser)
   # does not need an explicit route here.
 
-  location /avatars/sha                { try_files $uri @avatars; }
-  location /custom-start-points/sha    { try_files $uri @custom_start_points; }
-  location /exercises-start-points/sha { try_files $uri @exercises_start_points; }
-  location /languages-start-points/sha { try_files $uri @languages_start_points; }
-  location /differ/sha                 { try_files $uri @differ; }
-  location /runner/sha                 { try_files $uri @runner; }
-  location /saver/sha                  { try_files $uri @saver; }
+  location /avatars/sha {
+    rewrite ^/avatars/sha /sha break;
+    proxy_pass http://avatars:5027;
+  }
+  location /custom-start-points/sha {
+    rewrite ^/custom-start-points/sha /sha break;
+    proxy_pass http://custom-start-points:4526;
+  }
+  location /exercises-start-points/sha {
+    rewrite ^/exercises-start-points/sha /sha break;
+    proxy_pass http://exercises-start-points:4525;
+  }
+  location /languages-start-points/sha {
+    rewrite ^/languages-start-points/sha /sha break;
+    proxy_pass http://languages-start-points:4524;
+  }
+  location /differ/sha {
+    rewrite ^/differ/sha /sha break;
+    proxy_pass http://differ:4567;
+  }
+  location /runner/sha {
+    rewrite ^/runner/sha /sha break;
+    proxy_pass http://runner:4597;
+  }
+  location /saver/sha {
+    rewrite ^/saver/sha /sha break;
+    proxy_pass http://saver:4537;
+  }
   location /repler/sha                 {
     rewrite ^/repler/sha /sha break;
     proxy_pass http://repler:4657;
   }
-
-  location /shas                       { try_files $uri @shas; }
+  location /shas {
+    rewrite ^/shas/(.*) /$1 break;
+    proxy_pass http://shas:4522;
+  }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Pages to set up an exercise
 
-  location /custom-chooser/            { try_files $uri @custom_chooser; }
-  location /exercises-chooser/         { try_files $uri @exercises_chooser; }
-  location /languages-chooser/         { try_files $uri @languages_chooser; }
+  location /custom-chooser/ {
+    rewrite ^/custom-chooser/(.*) /$1 break;
+    proxy_pass http://custom-chooser:4536;
+  }
 
-  location /creator/                   { try_files $uri @creator; }
+  location /exercises-chooser/ {
+    rewrite ^/exercises-chooser/(.*) /$1 break;
+    proxy_pass http://exercises-chooser:4535;
+  }
+
+  location /languages-chooser/ {
+    rewrite ^/languages-chooser/(.*) /$1 break;
+    proxy_pass http://languages-chooser:4534;
+  }
+
+  location /creator/ {
+    rewrite ^/creator/(.*) /$1 break;
+    proxy_pass http://creator:4523;
+  }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Read-Eval-Print-Loop service (uses web-sockets)
@@ -71,84 +113,7 @@ server {
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # For everything else try web.
 
-  location /                           { try_files $uri @web; }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @deprecated_setup {
-    rewrite ^/setup_custom_start_point/save_group_json      /deprecated_group_create_custom break;
-    rewrite ^/setup_custom_start_point/save_individual_json /deprecated_kata_create_custom  break;
-    proxy_pass http://creator:4523;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @custom_start_points {
-    rewrite ^/custom-start-points/sha  /sha break;
-    proxy_pass http://custom-start-points:4526;
-  }
-  location @exercises_start_points {
-    rewrite ^/exercises-start-points/sha  /sha break;
-    proxy_pass http://exercises-start-points:4525;
-  }
-  location @languages_start_points {
-    rewrite ^/languages-start-points/sha  /sha break;
-    proxy_pass http://languages-start-points:4524;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @custom_chooser {
-    rewrite ^/custom-chooser/(.*) /$1 break;
-    proxy_pass http://custom-chooser:4536;
-  }
-
-  location @exercises_chooser {
-    rewrite ^/exercises-chooser/(.*) /$1 break;
-    proxy_pass http://exercises-chooser:4535;
-  }
-
-  location @languages_chooser {
-    rewrite ^/languages-chooser/(.*) /$1 break;
-    proxy_pass http://languages-chooser:4534;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @avatars {
-    rewrite ^/avatars/sha       /sha break;
-    rewrite ^/avatar/image/(.*) /image/$1 break;
-    proxy_pass http://avatars:5027;
-  }
-
-  location @differ {
-    rewrite ^/differ/sha /sha break;
-    proxy_pass http://differ:4567;
-  }
-
-  location @runner {
-    rewrite ^/runner/sha /sha break;
-    proxy_pass http://runner:4597;
-  }
-
-  location @saver {
-    rewrite ^/saver/sha /sha break;
-    proxy_pass http://saver:4537;
-  }
-
-  location @creator {
-    rewrite ^/creator/(.*) /$1 break;
-    proxy_pass http://creator:4523;
-  }
-
-  location @shas {
-    rewrite ^/shas/(.*) /$1 break;
-    proxy_pass http://shas:4522;
-  }
-
-  #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  location @web {
+  location /  {
     # An HTTP header important enough to have its own Wikipedia entry:
     # http://en.wikipedia.org/wiki/X-Forwarded-For
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
