--- a/.circleci/k8s-beta-values.yml
+++ b/.circleci/k8s-beta-values.yml
@@ -1,6 +1,7 @@
 
 ingress:
   enabled: true
+  tls_enabled: true
   annotations:
     kubernetes.io/ingress.class: "nginx"
     certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
