Add route for puller/sha

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -64,6 +64,10 @@ server {
     rewrite ^/runner/sha /sha break;
     proxy_pass http://runner:4597;
   }
+  location /puller/sha {
+    rewrite ^/puller/sha /sha break;
+    proxy_pass http://puller:5017;
+  }
   location /saver/sha {
     rewrite ^/saver/sha /sha break;
     proxy_pass http://saver:4537;
