Remove exercise-chooser and languages-chooser from nginx.conf

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -27,7 +27,7 @@ server {
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # The avatar service is abstraction of 64 entrants in a group-exercise
-  # each indexed entrant (eg /avatar/index/3) is an image.
+  # each indexed entrant (eg /avatar/image/3) is an image.
 
   location /avatar/image/ {
     rewrite ^/avatar/image/(.*) /image/$1 break;
@@ -82,17 +82,7 @@ server {
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Pages to set up an exercise
-
-  location /exercises-chooser/ {
-    rewrite ^/exercises-chooser/(.*) /$1 break;
-    proxy_pass http://exercises-chooser:4535;
-  }
-
-  location /languages-chooser/ {
-    rewrite ^/languages-chooser/(.*) /$1 break;
-    proxy_pass http://languages-chooser:4534;
-  }
+  # Pages to create up an exercise
 
   location /creator/ {
     rewrite ^/creator/(.*) /$1 break;
